k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-presigned-api
  labels:
    name: s3-presigned-api
    app: s3-presigned-api
